--- a/src/App.css
+++ b/src/App.css
@@ -39,3 +39,10 @@ select, option {
   border: 3px solid rgb(248, 248, 248);
   border-radius: 5px;
 }
+
+.MoviePage{
+  display: flex;
+  justify-content: space-around;
+  width: 80%;
+  margin: 40px auto;
+}
